@@ -338,7 +338,7 @@ StyleData::StyleData()
             StyleVal(ST_lyricsLineHeight, qreal(1.0)),
             StyleVal(ST_systemFrameDistance, Spatium(7.0)),
             StyleVal(ST_frameSystemDistance, Spatium(7.0)),
-            StyleVal(ST_minMeasureWidth, Spatium(4.0)),
+            StyleVal(ST_minMeasureWidth, Spatium(5.0)),
                                                             // finale european style
             StyleVal(ST_barWidth, Spatium(0.16)),           // 0.1875
             StyleVal(ST_doubleBarWidth, Spatium(0.16)),
